tenant-pkg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns # kpt-set: ${namespace}
  labels: 
    # version must match the ASM control plane revision
    istio.io/rev: asm-110 # kpt-set: ${istio-revision}
