tenant-pkg/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-within-namespace
  namespace: ns # kpt-set: ${namespace}
spec:
  rules:
  - from:
    - source:
        namespaces: ["ns"] # kpt-set: [${namespace}]
